--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <head>
 	<title> Index </title>
+	<link href="css.css" rel="stylesheet">
 </head>
 
 <body>
 	<p> gente inteligente, colmena de abejas, mastantuono </p>
+	<p> Proyecto DAW</p>
 </body>
