Cambios en clase con VS

--- a/index.html
+++ b/index.html
@@ -6,4 +6,13 @@
 <body>
 	<p> gente inteligente, colmena de abejas, mastantuono </p>
 	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
+	<p> Proyecto DAW</p>
 </body>
